--- a/app/views/9-0/manual-search-results.html
+++ b/app/views/9-0/manual-search-results.html
@@ -51,11 +51,19 @@ GOV.UK Manual
                         {% if result.found == true %}
                             {% for section in _thisManual.sections %}
                                 {% if section.id == result.id %}
+                                    {% set _url = "manual-page" %}
+                                    {% set _title = section.title %}
+                                    {% set _summary = section.summary %}
+                                    {% if section.titleglindex %}
+                                        {% set _url = "manual-glindex" %}
+                                        {% set _title = section.titleglindex %}
+                                        {% set _summary = section.summaryglindex %}
+                                    {% endif %}
                                 <li>
-                                    <h3><a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}">{{section.title|safe}}{% if section.range %} ({{section.range|safe}}){% endif %}</a></h3>
+                                    <h3><a href="{{_url}}?manual={{myData.manual}}&manualpage={{section.id}}">{{_title}}{% if section.range %} ({{section.range|safe}}){% endif %}</a></h3>
                                     {% if section.summary %}
                                     <p>
-                                        {{section.summary|safe}}
+                                        {{_summary}}
                                     </p>
                                     {% endif %}
                                 </li>
