--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,7 +18,8 @@
             <li>
                 <a href="/9-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-9-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section</li>
+                    <li><span class="govuk-!-font-weight-bold">english/maths</span> - original english and maths content from 2018 reinstated (provider)</li>
+                    <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section (provider)</li>
                     <li><span class="govuk-!-font-weight-bold">survey</span> - additional links added</li>
                 </ul>
             </li>
