--- a/app/views/includes/manual-data-notes.html
+++ b/app/views/includes/manual-data-notes.html
@@ -23,6 +23,8 @@
         <span class="govuk-!-font-weight-bold">Providers - 3</span>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
             <li>section snippets updated</li>
+            <li>original eng/maths content</li>
+            <li>glindex</li>
         </ul>
     </li>
     <li><span class="govuk-!-font-weight-bold">Providers - 2 - Updated English and Maths</span>
