--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,7 @@
                     <li><span class="govuk-!-font-weight-bold">english/maths</span> - original english and maths content from 2018 reinstated (provider)</li>
                     <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section (provider)</li>
                     <li><span class="govuk-!-font-weight-bold">survey</span> - additional links added</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - accessibility issues addressed</li>
                 </ul>
             </li>
             <li>
