--- a/app/views/9-0/manual-setup.html
+++ b/app/views/9-0/manual-setup.html
@@ -19,8 +19,8 @@
                         Start journey from
                     </label>
                     <select class="govuk-select" id="manualSetupStartFrom" name="manualSetupStartFrom" data-option="manualSetupStartFrom">
-                        <option {% if myData.startFrom == 'manual-home' %}selected{% endif %} value="manual-home">Manual homepage</option>
-                        <option {% if myData.startFrom == 'rules-years' %}selected{% endif %} value="rules-years">Year hub</option>
+                        <option {% if myData.startFrom == 'manual-home' %}selected{% endif %} value="manual-home">Manual front page</option>
+                        <option {% if myData.startFrom == 'rules-years' %}selected{% endif %} value="rules-years">Funding rules home page</option>
                         <option {% if myData.startFrom == 'google' %}selected{% endif %} value="google">Google</option>
                         <!-- <option {% if myData.startFrom == 'rules-list' %}selected{% endif %} value="rules-list">Collections list (17/18)</option> -->
                     </select>
