--- a/app/views/9-0/manual-setup.html
+++ b/app/views/9-0/manual-setup.html
@@ -46,7 +46,8 @@
                     </label>
                     <select class="govuk-select" id="manualSetupEngMathsChart" name="manualSetupEngMathsChart" data-option="manualSetupEngMathsChart">
                         <option {% if myData.emChart == 'false' %}selected{% endif %} value="false">None</option>
-                        <option {% if myData.emChart == 'svgflow' %}selected{% endif %} value="svgflow">Graphical chart (if available)</option>
+                        <option {% if myData.emChart == 'pngflow' %}selected{% endif %} value="pngflow">Graphical chart (PNG)</option>
+                        <option {% if myData.emChart == 'svgflow' %}selected{% endif %} value="svgflow">Graphical chart (SVG)</option>
                         <option {% if myData.emChart == 'textflow' %}selected{% endif %} value="textflow">Text decision tree (if available)</option>
                     </select>
                 </div>
@@ -112,6 +113,7 @@
             <h1 class="govuk-heading-l">Flow charts</h1>
             <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                 <li><a href="wrapper?include=english-maths-flow-3-fixed" class="govuk-link govuk-link--no-visited-state">SVG flow chart - English and Maths</a></li>
+                <li><a href="/public/images/english-maths-flow-4.png" class="govuk-link govuk-link--no-visited-state">PNG flow chart - English and Maths</a></li>
                 <li><a href="wrapper?include=english-maths-text-flow-2" class="govuk-link govuk-link--no-visited-state">Text decision tree - English and Maths</a></li>
             </ul>
         <!-- </form> -->
