--- a/app/views/9-0/manual-page.html
+++ b/app/views/9-0/manual-page.html
@@ -329,9 +329,14 @@
                                             <h3 class="govuk-heading-m">{{part.content|safe|trim}}</h3>
                                         {% elif part.type == "flow" %}
                                             {% if subsection.id == "support-english-maths-training" %}
-                                                <!-- Flow chart -->
+                                                <!-- Flow chart SVG -->
                                                 {% if myData.svgflow == "true" %}
                                                     {% include "../includes/english-maths-flow-3-fixed.html" %}
+                                                {% endif %}
+                                                <!-- Flow chart PNG -->
+                                                {% if myData.pngflow == "true" %}
+                                                    <h3 class="govuk-heading-m">Find out what English and maths training your apprentice should do</h3>
+                                                    <img class="flow-chart" style="width: auto; height: auto; max-width: 100%;margin-bottom: 30px" alt="Determine English and maths training - flow chart" src="/public/images/english-maths-flow-4.png">
                                                 {% endif %}
                                                 <!-- Text decision tree -->
                                                 {% if myData.textflow == "true" %}
