--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,12 +16,13 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
-                <a href="/9-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-9-0</a> (in progress)
+                <a href="/9-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-9-0</a> (tested 25/04 - 29/04)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">english/maths</span> - original english and maths content from 2018 reinstated (provider)</li>
                     <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section (provider)</li>
                     <li><span class="govuk-!-font-weight-bold">survey</span> - additional links added</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - accessibility issues addressed</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - PNG option added for flowchart</li>
                 </ul>
             </li>
             <li>
