v 10. preview content added

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,12 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
+                <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (in progress)
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">funding rules home</span> - added 19/20 preview</li>
+                </ul>
+            </li>
+            <li>
                 <a href="/9-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-9-0</a> (tested 25/04 - 29/04)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">english/maths</span> - original english and maths content from 2018 reinstated (provider)</li>
@@ -37,7 +43,7 @@
                     <li><span class="govuk-!-font-weight-bold">updates page</span> - divided updates over two dates, sub section labels are links</li>
                     <li><span class="govuk-!-font-weight-bold">updates (within sections)</span> - always visible option, latest updates listed under each sub-section heading</li>
                     <li><span class="govuk-!-font-weight-bold">years</span> - link to other years of rules added</li>
-                    <li><span class="govuk-!-font-weight-bold">years hub</span> - added</li>
+                    <li><span class="govuk-!-font-weight-bold">funding rules home</span> - added</li>
                     <li><span class="govuk-!-font-weight-bold">pdf link</span> - moved from collections page to direct link on manual</li>
                     <li><span class="govuk-!-font-weight-bold">section titles</span> - rule ranges added in brackets</li>
                     <li><span class="govuk-!-font-weight-bold">section summaries</span> - updated</li>
