--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,7 @@
                 <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">funding rules home</span> - added 19/20 preview</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths updated</li>
                 </ul>
             </li>
             <li>
