updated pdf names names and lead in on homepage

--- a/app/views/10-0/rules-years.html
+++ b/app/views/10-0/rules-years.html
@@ -440,24 +440,24 @@
 
 <p>The 2019 to 2020 rules apply to apprenticeships starting between 1 August 2019 and 31 July 2020. We’re issuing them now to give you time to prepare for any changes.</p>
 
-<p>View the apprenticeship funding rules for:</p>
+<p>View a preview of the apprenticeship funding rules for:</p>
 
 <ul>
     <li>
       <p><span class="attachment-inline">
-  <a href="/public/downloads/apprenticeship_funding_rules_and_guidance_for_employers_August_2019_to_July_2020_version_1_preview.pdf">employers</a>
+  <a href="/public/downloads/preview-apprenticeship-funding-rules-employers-2019-2020-v1.pdf">employers</a>
   (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">389KB</span>, <span class="page-length">50 pages</span>)
   </span></p>
     </li>
     <li>
       <p><span class="attachment-inline">
-  <a href="/public/downloads/apprenticeship_funding_rules_for_employer-providers_August_2019_to_July_2020_version_1_preview.pdf">employer-providers</a>
+  <a href="/public/downloads/preview-apprenticeship-funding-rules-employer-providers-2019-2020-v1.pdf">employer-providers</a>
   (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">862KB</span>, <span class="page-length">58 pages</span>)
   </span></p>
     </li>
     <li>
       <p><span class="attachment-inline">
-  <a href="/public/downloads/apprenticeship_funding_rules_for_training_providers_August_2019_to_July_2020_version_1_preview.pdf">training providers</a>
+  <a href="/public/downloads/preview-apprenticeship-funding-rules-training-providers-2019-2020-v1.pdf">training providers</a>
   (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">489KB</span>, <span class="page-length">82 pages</span>)
   </span></p>
     </li>
@@ -466,7 +466,7 @@
   <p>We’ll publish a final version of these rules by 31 July 2019.</p>
 
   <p>You can also view <span class="attachment-inline">
-      <a href="/Public/downloads/Apprenticeship_funding_rules_August_2019_to_July_2020_summary_of_changes_preview.pdf">apprenticeship funding rules 2019 to 2020: summary of changes</a>
+      <a href="/Public/downloads/preview-apprenticeship-funding-rules-2019-2020-summary-of-changes.pdf">apprenticeship funding rules 2019 to 2020: summary of changes</a>
       (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">95KB</span>, <span class="page-length">4 pages</span>)
       </span></p>
 
