--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,7 @@
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">funding rules home</span> - added 19/20 preview</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths updated</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs added</li>
                 </ul>
             </li>
             <li>
