--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,8 @@
                     <li><span class="govuk-!-font-weight-bold">funding rules home</span> - added 19/20 preview</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths updated</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs added</li>
+                    <li><span class="govuk-!-font-weight-bold">glindex</span> - iterations after testing TODO</li>
+                    <li><span class="govuk-!-font-weight-bold">rule range</span> - rule ranges include prefix e.g. '1 to 20' is now 'P1 to P20'</li>
                 </ul>
             </li>
             <li>
